<resources>
    <string name="app_name">profile</string>
    <string name="regular_member">Regular Member</string>
    <string name="profile">Profile</string>
    <string name="member_since">Member since</string>
    <string name="login">Login</string>
    <string name="medical_history">Medical History</string>
    <string name="sos_signal">SOS Signal</string>
    <string name="name1">Name</string>
    <string name="update_member_status">Update Member Status</string>
    <string name="emergency_contact1">Emergency Contact</string>
    <string name="personal_information">Personal Information</string>
    <string name="online">Online</string>
    <string name="register">Register</string>
    <string name="first_name"> First Name</string>
</resources>
